<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NativeWrap</string>
    <string name="hello_world">Hello!</string>
    <string name="menu_settings">Settings</string>
    <string name="download_available">An update for the HTTPSEverywhere dataset is available (~5MB)</string>
    <string name="download">Download</string>
    <string name="nothanks">Proceed without update</string>
	<string name="configure">Configure the app name and URL. The URL may change if HTTPS is forced. </string>
	<string name="allowsameorigin">Allow WebApps with Common Origin (2nd level subdomain).</string>
	<string name="readexternal">Allow app to read from my sdcard</string>
	<string name="writeexternal">Allow app to write to my sdcard</string>
	<string name="locationaccess">Allow app to access location data</string>
	<string name="fullscreenapp">Use app in fullscreen mode</string>
	<string name="appname">Enter app name here</string>
	<string name="forcehttps">Force HTTPS</string>
	<string name="google">https://www.google.com</string>
	<string name="makeapk">Make APK</string> 
	<string name="favicons">Set the favicon as the app\'s icon if available</string>
</resources>